--- a/style.css
+++ b/style.css
@@ -1,65 +1,53 @@
-/* DO NOT EDIT CSS CODE */
-
-@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light|Oswald|Permanent+Marker|Montserrat');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 body {
   margin: 0;
   background-color: #eee;
-}
-
-html, h1, h2, p {
-  font-family: 'Shadows Into Light', cursive;
-  color: DarkRed;
-  font-size: 24px;
-}
-
-main > div > article > section > header > h2 {
-  color: #668284;
-  font-size: 24px;
+  font-family: 'Merriweather', serif;
 }
 
 main > div > article > section > p {
   font-size: 16px;
 }
 
+main > div > article > section > img {
+  text-align: center;
+  margin: 10px 30px;
+}
+
 main > div > article > section > header > h2, 
-main > div > article > section p, 
 footer > div > nav > p {
   text-align: center;
+  margin: 10px 10px;
+  padding: 10px;
+}
+
+main > div > article > section p {
+  text-align: left;
   margin: 0;
   padding: 10px;
-  font-family: 'Oswald', sans-serif;
-}
-
-main > div > article {
-  overflow: visible;
-}
-
-main > div > article > section {
-  margin-left: -200%;
-  width: 500%;
-  border-bottom: 3px solid #668284;
-}
-
-main > div > article > section:last-child {
-  border-bottom: none;
 }
 
 header > div > h1 {
   text-align: center;
-  font-size: 70px;
+  font-size: 40px;
   margin: 0;
-  font-family: 'Permanent Marker', cursive;
+}
+
+header > div > h2 {
+  text-align: center;
+  font-size: 20px;
+  margin: 0;
 }
 
 header > div > nav {
-  margin: 0 0 10px 10px;
+  margin: 40px 0px 40px 0px;
+  text-align: center;
 }
 
 header > div > nav > a {
   padding: 0 15px 10px 20px;
   font-size: 16px;
   text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
   color: #493736;
 }
 
@@ -69,7 +57,7 @@ header > div > nav a:hover {
 
 nav,
 div {
-  width: 300px;
+  width: 600px;
   margin: auto;
 }
 
@@ -79,15 +67,8 @@ nav:after {
   clear: both;
 }
 
-main > div > article > section p {
+main > div > article > section {
   color: #493736;
-}
-
-main > div {
-  overflow: hidden;
-  border: 3px solid #668284;
-  padding: 10px;
-  background-color: #B9D7D9;
 }
 
 footer > div > nav > p {
@@ -95,6 +76,15 @@ footer > div > nav > p {
   font-size: 16px;
 }
 
-main > div > article > section > footer > p {
-  font-size: 16px;
+hr {
+  border: 2px solid black;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
 }
