--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@ body {
   font-family: 'Merriweather', serif;
 }
 
+footer {
+  background-color: #aaa;
+  width: 600px;
+  margin: auto;
+}
+
 main > div > article > section > p {
   font-size: 16px;
 }
@@ -30,7 +36,7 @@ main > div > article > section p {
 header > div > h1 {
   text-align: center;
   font-size: 40px;
-  margin: 0;
+  margin: 50px 0px 10px 0px;
 }
 
 header > div > h2 {
@@ -72,7 +78,7 @@ main > div > article > section {
 }
 
 footer > div > nav > p {
-  color: #668284;
+  color: black;
   font-size: 16px;
 }
 
