--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
+/*Import Font Family */
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
+
+/*Background Color and Font*/
 body {
   margin: 0;
   background-color: #eee;
   font-family: 'Merriweather', serif;
 }
 
+/*Footer Background and Widht*/
 footer {
   background-color: #aaa;
   width: 600px;
   margin: auto;
 }
 
+/*Styling Content for Main Section*/
 main > div > article > section > p {
   font-size: 16px;
 }
@@ -33,6 +38,7 @@ main > div > article > section p {
   padding: 10px;
 }
 
+/*Header Content Styling*/
 header > div > h1 {
   text-align: center;
   font-size: 40px;
@@ -43,6 +49,13 @@ header > div > h2 {
   text-align: center;
   font-size: 20px;
   margin: 0;
+}
+
+header > div > h3 {
+  text-align: center;
+  font-size: 23px;
+  margin: 0;
+  height: 20px;
 }
 
 header > div > nav {
@@ -57,10 +70,7 @@ header > div > nav > a {
   color: #493736;
 }
 
-header > div > nav a:hover {
-  color: #668284;
-}
-
+/*Navigation Styling*/
 nav,
 div {
   width: 600px;
@@ -77,17 +87,27 @@ main > div > article > section {
   color: #493736;
 }
 
+/*Footer Stlying*/
 footer > div > nav > p {
   color: black;
   font-size: 16px;
+  padding: 20px;
+  height: 10px;
 }
 
+/*Horizontal Rule*/
 hr {
   border: 2px solid black;
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
+/*Anchor Styling for click and after*/
+a:visited { color: black;   }
+a:hover   { color: #668284; }
+a:active  { color: pink;  }
+
+/*Center Alignment*/
 .center {
   display: block;
   margin-left: auto;
